Fixing icon alignment

--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,8 @@ a:hover {
     content: '\002B'; /* Unicode character for "plus" sign (+) */
     font-size: 20px;
     color: black;
-    float: right;
+    position: absolute;
+    right: 0;
     margin-left: 5px;
   }
   
@@ -193,7 +194,8 @@ a:hover {
     content: "\2212"; /* Unicode character for "minus" sign (-) */
     font-size: 20px;
     color: black;
-    float: right;
+    position: absolute;
+    right: 0;
     margin-left: 5px;
   }
 
